<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="TcoMessengerEnv" Id="{e6a12bea-a5ee-06da-38d8-d4f316d1c513}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC TcoMessengerEnv IMPLEMENTS ITcoMessengerEnv
VAR
    _minLevel : eMessageCategory;
    _isMessagingSuspended : BOOL;
    _messageDigestMethod : eMessageDigestMethod := eMessageDigestMethod.CRC16;
    _messengerLoggingMethod : eMessengerLogMethod := eMessengerLogMethod.OnEventRisen;
    {attribute 'hide'}
    _sb : StringBuilder();
END_VAR
VAR CONSTANT
    MAX_MESSAGE_TEXT_LENGHT : INT := 160;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="IsSuspended" Id="{184432ba-ed30-0ea9-34ef-43a09897d070}">
      <Declaration><![CDATA[(*~
    <docu>
        <summary>
            Gets whether the messaging is suspended at this point in program.
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.Resume()"/>
            </para>
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.Suspend()"/>
            </para>
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.MinLevel"/>
            </para>
        </summary>
    </docu>
~*)
PROPERTY PUBLIC IsSuspended : BOOL]]></Declaration>
      <Get Name="Get" Id="{084a81d6-66a6-0874-005f-95fe275f2e20}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[IsSuspended := _isMessagingSuspended;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="MessageDigestMethod" Id="{8041cbc1-4471-0961-3423-4f31314a9d8e}">
      <Declaration><![CDATA[(*~
    <docu>
        <summary>
            Gets or sets message digest method.
            Message digest serves to fingerprint messages.
            See also MessengerLoggingMethod.
        </summary>
    </docu>
~*)
PROPERTY MessageDigestMethod : eMessageDigestMethod]]></Declaration>
      <Get Name="Get" Id="{b3f7f6bd-754b-0e4f-384a-efdba8dfe5c7}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[MessageDigestMethod := _messageDigestMethod;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{496e0060-8d72-0abc-21fc-4120f38624b7}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[_messageDigestMethod := MessageDigestMethod;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="MessengerLoggingMethod" Id="{ceb67f4f-5f48-0808-109b-9521842dfa6a}">
      <Declaration><![CDATA[(*~
    <docu>
        <summary>
            Gets or sets logging method.
            Logger can ingest messages continuously, on rising edge of a message or disable the logging.
        </summary>
    </docu>
~*)
PROPERTY MessengerLoggingMethod : eMessengerLogMethod]]></Declaration>
      <Get Name="Get" Id="{5751a4db-5e4a-0098-31c4-ddb84e14601c}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[MessengerLoggingMethod := _messengerLoggingMethod;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{a4e87f54-934e-0e51-2d8b-4278ae8c6121}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[_messengerLoggingMethod := MessengerLoggingMethod;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="MinLevel" Id="{23651bcd-e46c-0710-3196-f31340d2b191}">
      <Declaration><![CDATA[(*~
    <docu>
        <summary>
            Gets or set minimal messaging level, the objects will post only messages for the levels of this or superior severity.
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.Resume()"/>
            </para>
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.Suspend()"/>
            </para>
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.MinLevel"/>
            </para>
        </summary>
    </docu>
~*)
PROPERTY PUBLIC MinLevel : eMessageCategory]]></Declaration>
      <Get Name="Get" Id="{a3f8be89-55fd-0145-22e8-3db7665a5a41}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[MinLevel := _minLevel;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{37e3c080-4fd2-08fd-3a05-ce1eee6307a9}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[_minLevel := MinLevel;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="Resume" Id="{456a9fc8-9f8f-0e21-2081-9877f3b9364c}">
      <Declaration><![CDATA[(*~
    <docu>
        <summary>
            Resumes messaging from the all objects of this context, when the messaging was previously suspended by ```Suspend``` method.
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.Suspend()"/>
            </para>
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.MinLevel"/>
            </para>
        </summary>
    </docu>
~*)
METHOD PUBLIC Resume : BOOL]]></Declaration>
      <Implementation>
        <ST><![CDATA[_isMessagingSuspended := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Property Name="StringBuilder" Id="{e65981c7-09b3-0eda-0b76-93858198e4f0}">
      <Declaration><![CDATA[PROPERTY StringBuilder : REFERENCE TO StringBuilder]]></Declaration>
      <Get Name="Get" Id="{8e7875a9-7cd0-0220-1110-a8523e0cffd3}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[StringBuilder REF= _sb;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Suspend" Id="{ed0d7753-8ddd-0f15-326c-cd14614ece49}">
      <Declaration><![CDATA[(*~
    <docu>
        <summary>
            Suspends messaging from the all objects of this context that would occur from this point in the call tree.
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.Resume()"/>
            </para>
            <para>
                See also <see cref="PlcDocu.TcoCore.TcoMessengerSettings.MinLevel"/>
            </para>
        </summary>
    </docu>
~*)
METHOD PUBLIC Suspend]]></Declaration>
      <Implementation>
        <ST><![CDATA[_isMessagingSuspended := TRUE;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>